--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -1,26 +1,26 @@
 jobs:
     build:
-        requires: [~pr, ~commit, ~sd@378:main]
-        image: node:8
+        requires: [~pr, ~commit, ~sd@16:rollback]
+        image: node:12
         steps:
             - echo: echo building
             - sleep: sleep 20s
             - meta: meta set version 1
     deploy-east:
         requires: [build]
-        image: node:8
+        image: node:12
         steps:
             - echo: echo deploying east
             - meta: meta set east 2
     deploy-west:
         requires: [build]
-        image: node:8
+        image: node:12
         steps:
             - echo: echo deploying west
             - meta: meta set west 3
     tests:
         requires: [deploy-west, deploy-east]
-        image: node:8
+        image: node:12
         steps:
             - echo: echo testing wast and west
             - metas: |
@@ -28,6 +28,6 @@ jobs:
                 meta get east;
                 meta get west;
     rollback:
-        image: node:6
+        image: node:12
         steps:
             - echo: echo rolling back version `meta get version`
